--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,3 @@
 <resources>
-    <string name="app_name">MD Calculator</string>
-    <string name="action_settings">Settings</string>
-    <string name="greeting">Hello Damn Me!</string>
+    <string name="app_name">Calculator Material Design</string>
 </resources>
