--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Calculator Material Design</string>
     <string name="edit_message">Enter a message</string>
     <string name="button_send">Send</string>
+    <string name="message_show">message appear here</string>
 </resources>
